<resources>
    <string name="app_name">Weather04</string>
    <string name="search">Search</string>
    <string name="location">Location</string>
    <string name="time">Time and date</string>
    <string name="summary">Summary</string>
    <string name="temperature">Temperature</string>
    <string name="see_detail">See detail</string>
    <string name="wind_speed">Wind speed</string>
    <string name="humid">Humid</string>
    <string name="precip_probability">Precipitation probability</string>
    <string name="text_see_detail">See detail</string>
    <string name="home_option">Home</string>
    <string name="search_option">Search</string>
    <string name="temperature_option">Temperature</string>
    <string name="wind_speed_option">Wind speed</string>
    <string name="history_option">History</string>
    <string name="degree_F_option">\u2109</string>
    <string name="degree_C_option">\u2103</string>
    <string name="on_get_data_response_error">You must to connect the network</string>
    <string name="seven_days_next">Seven days next</string>
    <string name="day">Day</string>
    <string name="precip">Precip</string>
</resources>
