<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutDrawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_sunny_background">

        <ImageButton
            android:id="@+id/btn_menu"
            android:layout_width="@dimen/dp_26"
            android:layout_height="@dimen/dp_26"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/ic_menu"
            app:layout_constraintLeft_toLeftOf="@id/home"
            app:layout_constraintTop_toTopOf="@id/home" />

        <EditText
            android:id="@+id/et_search"
            android:layout_width="@dimen/dp_255"
            android:layout_height="@dimen/dp_26"
            android:layout_marginLeft="@dimen/dp_10"
            android:background="@color/colorNull"
            android:hint="@string/search"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorLightYellow"
            android:textSize="@dimen/sp_20"
            app:layout_constraintLeft_toRightOf="@id/btn_menu"
            app:layout_constraintTop_toTopOf="@id/btn_menu" />

        <ImageButton
            android:id="@+id/btn_search"
            android:layout_width="@dimen/dp_26"
            android:layout_height="@dimen/dp_26"
            android:layout_marginStart="@dimen/dp_10"
            android:background="@drawable/ic_search"
            app:layout_constraintLeft_toRightOf="@id/et_search"
            app:layout_constraintTop_toTopOf="@id/btn_menu" />

        <Spinner
            android:layout_width="@dimen/dp_26"
            android:layout_height="@dimen/dp_26"
            android:layout_marginLeft="@dimen/dp_40"
            android:backgroundTint="@color/colorWhite"
            app:layout_constraintLeft_toRightOf="@id/btn_search"
            app:layout_constraintTop_toTopOf="@id/btn_menu" />

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/srl_swipe_refresh_layout_home"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_menu">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_65"
                    android:hint="@string/location"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorLightYellow"
                    android:textSize="@dimen/sp_30"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/time"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorLightYellow"
                    android:textSize="@dimen/sp_20"
                    android:textStyle="italic"
                    app:layout_constraintLeft_toLeftOf="@id/tv_location"
                    app:layout_constraintTop_toBottomOf="@id/tv_location" />

                <TextView
                    android:id="@+id/tv_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_time"
                    android:layout_marginTop="@dimen/dp_75"
                    android:hint="@string/temperature"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorLightYellow"
                    android:textSize="@dimen/sp_55"
                    app:layout_constraintLeft_toLeftOf="@id/tv_time"
                    app:layout_constraintTop_toBottomOf="@id/tv_time" />

                <ImageView
                    android:id="@+id/iv_summary_ic"
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_50"
                    android:layout_marginTop="@dimen/dp_10"
                    app:layout_constraintLeft_toLeftOf="@id/tv_temperature"
                    app:layout_constraintTop_toBottomOf="@id/tv_temperature" />

                <TextView
                    android:id="@+id/tv_summary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_temperature"
                    android:layout_marginStart="@dimen/dp_5"
                    android:layout_marginTop="@dimen/dp_30"
                    android:hint="@string/summary"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorLightYellow"
                    android:textSize="@dimen/sp_20"
                    app:layout_constraintLeft_toRightOf="@id/iv_summary_ic"
                    app:layout_constraintTop_toBottomOf="@id/tv_temperature" />

                <Button
                    android:id="@+id/btn_see_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_marginEnd="@dimen/dp_10"
                    android:background="@color/colorNull"
                    android:text="@string/text_see_detail"
                    android:textColor="@color/colorLightYellow"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_summary" />

                <ImageView
                    android:id="@+id/iv_wind_speed"
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_50"
                    android:layout_marginLeft="@dimen/dp_30"
                    android:layout_marginTop="@dimen/dp_75"
                    android:background="@drawable/ic_wind"
                    app:layout_constraintLeft_toLeftOf="@id/tv_temperature"
                    app:layout_constraintTop_toBottomOf="@id/btn_see_detail" />

                <ImageView
                    android:id="@+id/iv_rain"
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_50"
                    android:layout_marginLeft="@dimen/dp_85"
                    android:background="@drawable/ic_umbrella"
                    app:layout_constraintLeft_toRightOf="@id/iv_wind_speed"
                    app:layout_constraintTop_toTopOf="@id/iv_wind_speed" />

                <ImageView
                    android:id="@+id/iv_humid"
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_50"
                    android:layout_marginLeft="@dimen/dp_85"
                    android:background="@drawable/ic_humidity"
                    app:layout_constraintLeft_toRightOf="@id/iv_rain"
                    app:layout_constraintTop_toTopOf="@id/iv_wind_speed" />

                <TextView
                    android:id="@+id/tv_wind_speed"
                    android:layout_width="@dimen/dp_100"
                    android:layout_height="@dimen/dp_50"
                    android:layout_marginStart="@dimen/dp_20"
                    android:hint="@string/wind_speed"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorLightYellow"
                    android:textSize="@dimen/sp_16"
                    app:layout_constraintLeft_toLeftOf="@id/tv_temperature"
                    app:layout_constraintTop_toBottomOf="@id/iv_wind_speed" />

                <TextView
                    android:id="@+id/tv_rain"
                    android:layout_width="@dimen/dp_60"
                    android:layout_height="@dimen/dp_50"
                    android:layout_marginStart="@dimen/dp_50"
                    android:hint="@string/precip_probability"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorLightYellow"
                    android:textSize="@dimen/sp_16"
                    app:layout_constraintLeft_toRightOf="@id/tv_wind_speed"
                    app:layout_constraintTop_toBottomOf="@id/iv_rain" />

                <TextView
                    android:id="@+id/tv_humid"
                    android:layout_width="@dimen/dp_70"
                    android:layout_height="@dimen/dp_50"
                    android:layout_marginStart="@dimen/dp_65"
                    android:hint="@string/humid"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorLightYellow"
                    android:textSize="@dimen/sp_16"
                    app:layout_constraintLeft_toRightOf="@id/tv_rain"
                    app:layout_constraintTop_toBottomOf="@id/iv_humid" />
            </android.support.constraint.ConstraintLayout>
        </android.support.v4.widget.SwipeRefreshLayout>
    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_marginTop="@dimen/dp_65"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_325"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:background="@color/colorDarkBlue">

        <TextView
            android:id="@+id/tv_home_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_option"
            android:layout_marginTop="@dimen/dp_25"
            android:layout_marginLeft="@dimen/dp_25"
            android:textSize="@dimen/sp_20"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:id="@+id/tv_search_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_option"
            android:layout_marginLeft="@dimen/dp_25"
            android:textSize="@dimen/sp_20"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="@dimen/dp_80"/>

        <Switch
            android:id="@+id/switch_wind_speed_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind_speed_option"
            android:layout_marginLeft="@dimen/dp_25"
            android:textSize="@dimen/sp_20"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="@dimen/dp_190"/>

        <TextView
            android:id="@+id/tv_history_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history_option"
            android:layout_marginLeft="@dimen/dp_25"
            android:textSize="@dimen/sp_20"
            android:textColor="@color/colorWhite"
            android:shadowColor="@color/colorLightYellow"
            android:layout_marginTop="@dimen/dp_245"/>

        <Switch
            android:id="@+id/switch_temperature_option"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_130"
            android:layout_marginLeft="@dimen/dp_25"
            android:text="@string/temperature"
            android:textSize="@dimen/sp_20"
            android:textColor="@color/colorWhite" />
    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>
