<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_item_day"
        android:layout_width="@dimen/dp_85"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_40"
        android:maxLines="1"
        android:hint="@string/day"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorLightYellow"
        android:textSize="@dimen/sp_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_item_icon"
        android:layout_width="@dimen/dp_30"
        android:layout_height="@dimen/dp_30"
        android:layout_marginStart="@dimen/dp_20"
        app:layout_constraintBottom_toBottomOf="@id/tv_item_day"
        app:layout_constraintStart_toEndOf="@+id/tv_item_day"
        app:layout_constraintTop_toTopOf="@+id/tv_item_day" />

    <ImageView
        android:id="@+id/iv_item_rain"
        android:layout_width="@dimen/dp_30"
        android:layout_height="@dimen/dp_30"
        android:layout_marginStart="@dimen/dp_40"
        android:background="@drawable/ic_umbrella"
        app:layout_constraintStart_toEndOf="@+id/iv_item_icon"
        app:layout_constraintTop_toTopOf="@+id/iv_item_icon" />

    <TextView
        android:id="@+id/tv_item_rain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_5"
        android:hint="@string/precip"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorLightYellow"
        android:textSize="@dimen/sp_16"
        app:layout_constraintLeft_toRightOf="@+id/iv_item_rain"
        app:layout_constraintTop_toTopOf="@+id/tv_item_day" />

    <TextView
        android:id="@+id/tv_item_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/temperature"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorLightYellow"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_item_day" />

</android.support.constraint.ConstraintLayout>
